Fix too wide box

--- a/styles/scrabble.css
+++ b/styles/scrabble.css
@@ -63,7 +63,7 @@
 	padding: 3px;
 	margin: 0 5px;
 
-	width: 100%;
+	width: calc(100% - 16px);
 	cursor: text;
 }
 .gamesList .listGame .listGameTitleBox .listGameName:hover {
@@ -72,7 +72,7 @@
 }
 .gamesList .listGame .listGameTitleBox .listGameNameInput {
 	font-weight: bold;
-	width: 100%;
+	width: calc(100% - 16px);
 	border-radius: 3px;
 	padding: 3px;
 	margin: 0 5px;
